force-app/main/default/objects/Account/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <label>Identification Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>