force-app/main/default/objects/Account/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>National ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>